--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -7,12 +7,7 @@
 <title>Yun html projects</title>
 </head>
 
-<body>
-	<h1>apple projects</h1>
-	<ul>
-		<li>회원관리
-	</ul>
-	<hr>
+<body>memberForm.html
 
 </body>
 </html>
