--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -1,13 +1,108 @@
 <!DOCTYPE HTML>
 <html lang="kor">
+
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Yun html projects</title>
+<title>Yun html projects memberView</title>
 </head>
 
-<body>memberView.html
+<body>
+	memberView.html
 
+	<table border="1">
+		<tr>
+			<th>이름</th>
+			<td>윤영민</td>
+			<th>성별</th>
+			<td>남</td>
+		</tr>
+		<tr>
+			<th>아이디</th>
+			<td>yym2044</td>
+			<th>비밀번호</th>
+			<td>*********</td>
+		</tr>
+		<tr>
+			<th>생일</th>
+			<td>1996.06.07</td>
+			<th>국적</th>
+			<td>대한민국</td>
+		</tr>
+		<tr>
+			<th>주소</th>
+			<td colspan="3">경기도 남양주시</td>
+		</tr>
+		<tr>
+			<td>모바일</td>
+			<td></td>
+			<td>모바일 마케팅 수신 동의</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>전화번호</td>
+			<td></td>
+			<td>팩스번호</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>이메일</td>
+			<td></td>
+			<td>이메일 마케팅 수신 동의</td>
+			<td></td>
+
+		</tr>
+
+		<tr>
+			<td>추천인</td>
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<td>비밀번호 문제</td>
+			<td></td>
+			<td>비밀번호 답</td>
+			<td></td>
+		</tr>
+
+
+		<tr>
+			<td>sns</td>
+			<td></td>
+			<td>사진</td>
+			<td><img src="./winter.jpeg" width="80"></td>
+		</tr>
+		<tr>
+			<td>홈페이지</td>
+			<td></td>
+			<td>희망 직업</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>취미</td>
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<td>결혼여부</td>
+			<td></td>
+			<td>결혼기념일</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>자녀유무</td>
+			<td></td>
+
+			<td>좋아하는 색깔</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>본인 소개</td>
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<td>개인정보유효기간</td>
+			<td colspan="3"></td>
+		</tr>
+	</table>
 </body>
 </html>
