--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -6,6 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Yun html projects memberView</title>
+
+<style type="text/css">
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th, td {
+	padding: 8px;
+}
+</style>
+
 </head>
 
 <body>
@@ -104,5 +116,31 @@
 			<td colspan="3"></td>
 		</tr>
 	</table>
+
+	<table>
+		<tr>
+			<td>번호</td>
+			<td>프로젝트 이름</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+	</table>
+
 </body>
 </html>
