--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>apple projects</h1>
 	<ul>
-		<li>회원관리
+		<li><a href="./apple/member/memberList.html">회원관리</a></li>
 	</ul>
 	<hr>
 
