--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -48,21 +48,21 @@ th, td {
 		</tr>
 		<tr>
 			<td>모바일</td>
-			<td></td>
+			<td>010-1234-5678</td>
 			<td>모바일 마케팅 수신 동의</td>
-			<td></td>
+			<td>예</td>
 		</tr>
 		<tr>
 			<td>전화번호</td>
-			<td></td>
+			<td>031-123-4567</td>
 			<td>팩스번호</td>
-			<td></td>
+			<td>12346576</td>
 		</tr>
 		<tr>
 			<td>이메일</td>
-			<td></td>
+			<td>yym2044@naver.com</td>
 			<td>이메일 마케팅 수신 동의</td>
-			<td></td>
+			<td>예</td>
 
 		</tr>
 
@@ -72,23 +72,25 @@ th, td {
 		</tr>
 		<tr>
 			<td>비밀번호 문제</td>
-			<td></td>
+			<td>aklghadshfds?</td>
 			<td>비밀번호 답</td>
-			<td></td>
+			<td>asdfagdsa</td>
 		</tr>
 
 
 		<tr>
 			<td>sns</td>
-			<td></td>
+			<td><select><option>insta</option>
+					<option>facebook</option>
+					<option>twitter</option></select></td>
 			<td>사진</td>
 			<td><img src="./winter.jpeg" width="80"></td>
 		</tr>
 		<tr>
 			<td>홈페이지</td>
-			<td></td>
+			<td>blog.naver.com/~~</td>
 			<td>희망 직업</td>
-			<td></td>
+			<td>개발자</td>
 		</tr>
 		<tr>
 			<td>취미</td>
@@ -96,24 +98,24 @@ th, td {
 		</tr>
 		<tr>
 			<td>결혼여부</td>
-			<td></td>
+			<td>아니오</td>
 			<td>결혼기념일</td>
-			<td></td>
+			<td>-</td>
 		</tr>
 		<tr>
 			<td>자녀유무</td>
-			<td></td>
+			<td>-</td>
 
 			<td>좋아하는 색깔</td>
-			<td></td>
+			<td>#00000</td>
 		</tr>
 		<tr>
 			<td>본인 소개</td>
-			<td colspan="3"></td>
+			<td colspan="3">안녕하세요</td>
 		</tr>
 		<tr>
 			<td>개인정보유효기간</td>
-			<td colspan="3"></td>
+			<td colspan="3">10년</td>
 		</tr>
 	</table>
 
