--- a/public/apple/member/memberList.html
+++ b/public/apple/member/memberList.html
@@ -4,10 +4,68 @@
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Yun html projects</title>
+<title>Yun html projects memberList</title>
+
+<style type="text/css">
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th, td {
+	padding: 8px;
+}
+</style>
+
+
 </head>
 
-<body>MemberList.html
+<body>
+	MemberList.html
+
+	<table border="1">
+
+		<tr>
+			<th>이름</th>
+			<td><a href="./memberView.html">윤하나</a></td>
+			<td>윤둘</td>
+			<td>윤셋</td>
+			<td>윤넷</td>
+			<td>윤다섯</td>
+		</tr>
+		<tr>
+			<th>성별</th>
+			<td>남</td>
+			<td>여</td>
+			<td>남</td>
+			<td>여</td>
+			<td>남</td>
+		</tr>
+		<tr>
+			<th>아이디</th>
+			<td>Asdf4a56</td>
+			<td>Bwermb1</td>
+			<td>Cfd254</td>
+			<td>D123aa1z</td>
+			<td>Egs12</td>
+		</tr>
+		<tr>
+			<th>비밀번호</th>
+			<td>111</td>
+			<td>222</td>
+			<td>333</td>
+			<td>444</td>
+			<td>555</td>
+		</tr>
+		<tr>
+			<th>생일</th>
+			<td>0101</td>
+			<td>0202</td>
+			<td>0303</td>
+			<td>0404</td>
+			<td>0505</td>
+		</tr>
+	</table>
 
 </body>
 </html>
