--- a/public/apple/member/memberList.html
+++ b/public/apple/member/memberList.html
@@ -27,43 +27,48 @@ th, td {
 
 		<tr>
 			<th>이름</th>
-			<td><a href="./memberView.html">윤하나</a></td>
-			<td>윤둘</td>
-			<td>윤셋</td>
-			<td>윤넷</td>
-			<td>윤다섯</td>
-		</tr>
-		<tr>
 			<th>성별</th>
-			<td>남</td>
-			<td>여</td>
-			<td>남</td>
-			<td>여</td>
-			<td>남</td>
-		</tr>
-		<tr>
 			<th>아이디</th>
-			<td>Asdf4a56</td>
-			<td>Bwermb1</td>
-			<td>Cfd254</td>
-			<td>D123aa1z</td>
-			<td>Egs12</td>
-		</tr>
-		<tr>
-			<th>비밀번호</th>
-			<td>111</td>
-			<td>222</td>
-			<td>333</td>
-			<td>444</td>
-			<td>555</td>
-		</tr>
-		<tr>
+			<th>비번</th>
+			<th>이메일</th>
 			<th>생일</th>
+			<th>연락처</th>
+		</tr>
+		<tr>
+			<td><a href="./memberView.html">윤하나</a></td>
+			<td>여</td>
+			<td>hana</td>
+			<td>111</td>
+			<td>hana@naver.com</td>
 			<td>0101</td>
+			<td>01011111111</td>
+		</tr>
+		<tr>
+			<td>윤둘</td>
+			<td>남</td>
+			<td>dool</td>
+			<td>222</td>
+			<td>dool@naver.com</td>
 			<td>0202</td>
+			<td>01022222222</td>
+		</tr>
+		<tr>
+			<td>윤셋</td>
+			<td>남</td>
+			<td>set</td>
+			<td>333</td>
+			<td>set@google.com</td>
 			<td>0303</td>
+			<td>01033333333</td>
+		</tr>
+		<tr>
+			<td>윤넷</td>
+			<td>여</td>
+			<td>net</td>
+			<td>444</td>
+			<td>net@daum.net</td>
 			<td>0404</td>
-			<td>0505</td>
+			<td>01044444444</td>
 		</tr>
 	</table>
 
