--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -24,6 +24,7 @@ th, td {
 	memberView.html
 
 	<table border="1">
+	<caption><b>회원정보</b></caption>
 		<tr>
 			<th>이름</th>
 			<td>윤영민</td>
@@ -47,97 +48,97 @@ th, td {
 			<td colspan="3">경기도 남양주시</td>
 		</tr>
 		<tr>
-			<td>모바일</td>
+			<th>모바일</th>
 			<td>010-1234-5678</td>
-			<td>모바일 마케팅 수신 동의</td>
+			<th>모바일 마케팅 수신 동의</th>
 			<td>예</td>
 		</tr>
 		<tr>
-			<td>전화번호</td>
+			<th>전화번호</th>
 			<td>031-123-4567</td>
-			<td>팩스번호</td>
+			<th>팩스번호</th>
 			<td>12346576</td>
 		</tr>
 		<tr>
-			<td>이메일</td>
+			<th>이메일</th>
 			<td>yym2044@naver.com</td>
-			<td>이메일 마케팅 수신 동의</td>
+			<th>이메일 마케팅 수신 동의</th>
 			<td>예</td>
 
 		</tr>
 
 		<tr>
-			<td>추천인</td>
+			<th>추천인</th>
 			<td colspan="3"></td>
 		</tr>
 		<tr>
-			<td>비밀번호 문제</td>
-			<td>aklghadshfds?</td>
-			<td>비밀번호 답</td>
+			<th>비밀번호 문제</th>
+			<td></td>
+			<th>비밀번호 답</th>
 			<td>asdfagdsa</td>
 		</tr>
 
 
 		<tr>
-			<td>sns</td>
+			<th>sns</th>
 			<td><select><option>insta</option>
 					<option>facebook</option>
 					<option>twitter</option></select></td>
-			<td>사진</td>
+			<th>사진</th>
 			<td><img src="./winter.jpeg" width="80"></td>
 		</tr>
 		<tr>
-			<td>홈페이지</td>
+			<th>홈페이지</th>
 			<td>blog.naver.com/~~</td>
-			<td>희망 직업</td>
+			<th>희망 직업</th>
 			<td>개발자</td>
 		</tr>
 		<tr>
-			<td>취미</td>
-			<td colspan="3"></td>
+			<th>취미</th>
+			<td colspan="3">등산, 영화, 스마트폰</td>
 		</tr>
 		<tr>
-			<td>결혼여부</td>
+			<th>결혼여부</th>
 			<td>아니오</td>
-			<td>결혼기념일</td>
+			<th>결혼기념일</th>
 			<td>-</td>
 		</tr>
 		<tr>
-			<td>자녀유무</td>
+			<th>자녀유무</th>
 			<td>-</td>
 
-			<td>좋아하는 색깔</td>
+			<th>좋아하는 색깔</th>
 			<td>#00000</td>
 		</tr>
 		<tr>
-			<td>본인 소개</td>
-			<td colspan="3">안녕하세요</td>
+			<th>본인 소개</th>
+			<td colspan="3">안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다.</td>
 		</tr>
 		<tr>
-			<td>개인정보유효기간</td>
+			<th>개인정보유효기간</th>
 			<td colspan="3">10년</td>
 		</tr>
 	</table>
 
 	<table>
 		<tr>
-			<td>번호</td>
-			<td>프로젝트 이름</td>
-			<td></td>
-			<td></td>
+			<th>번호</th>
+			<th>프로젝트 이름</th>
+			<th>기간</th>
+			<th>프로젝트 내용</th>
+			<th>발주처</th>
+		</tr>
+		<tr>
+			<th>1</th>
+			<td>웹</td>
+			<td>2020.08~2021.01</td>
+			<td>웹 개발</td>
 			<td></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<th>2</th>
+			<td>안드로이드</td>
+			<td>2021.02~2022.01</td>
 			<td></td>
 			<td></td>
 		</tr>
