--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -1,13 +1,171 @@
 <!DOCTYPE HTML>
 <html lang="kor">
+
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Yun html projects</title>
+<title>Yun html projects memberView</title>
+
+<style type="text/css">
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th, td {
+	padding: 8px;
+}
+</style>
+
 </head>
 
-<body>memberForm.html
+<body>
+	memberForm.html
+	<form action="" method="get" id="" name="" enctype="multipart/form-data">
+		<table border="1">
+			<caption>
+				<b>회원정보</b>
+			</caption>
+			<tr>
+				<th>이름</th>
+				<td><input type="text" id="" name=""></td>
+				<th>성별</th>
+				<td><input type="radio" id="" name="gender">남 <input type="radio" id="" name="gender">여</td>
+			</tr>
+			<tr>
+				<th>아이디</th>
+				<td><input type="text" id="" name=""></td>
+				<th>비밀번호</th>
+				<td><input type="password" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>생년월일</th>
+				<td><input type="date" id="" name=""></td>
+				<th>국적</th>
+				<td><select>
+						<option>대한민국</option>
+						<option>미국</option>
+						<option>일본</option>
+						<option>영국</option>
+						<option>프랑스</option>
+						<option>이탈리아</option>
+						<option>중국</option>
+				</select></td>
+			</tr>
+			<tr>
+				<th>주소</th>
+				<td colspan="3"><input type="text" id="" name="" size="100"></td>
+			</tr>
+			<tr>
+				<th>모바일</th>
+				<td><input type="text" id="" name=""></td>
+				<th>모바일 마케팅 수신 동의</th>
+				<td><input type="radio" id="" name="mobile_marketing">예 <input type="radio" id=""
+					name="mobile_marketing">아니오</td>
+			</tr>
+			<tr>
+				<th>전화번호</th>
+				<td><input type="text" id="" name=""></td>
+				<th>팩스번호</th>
+				<td><input type="text" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>이메일</th>
+				<td><input type="email" id="" name=""></td>
+				<th>이메일 마케팅 수신 동의</th>
+				<td><input type="radio" id="" name="email_marketing">예 <input type="radio" id="" name="email_marketing">아니오</td>
 
+			</tr>
+
+			<tr>
+				<th>추천인</th>
+				<td colspan="3"><input type="text" id="" name=""> <input type="text" id="" name=""> <input
+					type="text" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>비밀번호 문제</th>
+				<td><select>
+						<option>나의 보물 1호는?</option>
+						<option>나의 고향은?</option>
+						<option>내가 키우는 애완동물의 이름은?</option>
+						<option>가장 친한 친구 이름은?</option>
+				</select></td>
+				<th>비밀번호 답</th>
+				<td><input type="text" id="" name=""></td>
+			</tr>
+
+
+			<tr>
+				<th>sns</th>
+				<td><select><option>insta</option>
+						<option>facebook</option>
+						<option>twitter</option></select></td>
+				<th>사진</th>
+				<td><input type="file" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>홈페이지</th>
+				<td><input type="text" id="" name=""></td>
+				<th>희망 직업</th>
+				<td><input type="text" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>취미</th>
+				<td colspan="3"><input type="text" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>결혼여부</th>
+				<td><input type="radio" id="" name="marriage">예 <input type="radio" id="" name="marriage">아니오</td>
+				<th>결혼기념일</th>
+				<td>-</td>
+			</tr>
+			<tr>
+				<th>자녀유무</th>
+				<td>-</td>
+
+				<th>좋아하는 색깔</th>
+				<td><input type="color" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>본인 소개</th>
+				<td colspan="3"><input type="text" id="" name="" size="100"></td>
+			</tr>
+			<tr>
+				<th>개인정보유효기간</th>
+				<td colspan="3"><select>
+						<option>1년</option>
+						<option>3년</option>
+						<option>5년</option>
+						<option>10년</option>
+				</select></td>
+			</tr>
+		</table>
+
+		<table>
+			<tr>
+				<th>번호</th>
+				<th>프로젝트 이름</th>
+				<th>기간</th>
+				<th>프로젝트 내용</th>
+				<th>발주처</th>
+			</tr>
+			<tr>
+				<th>1</th>
+				<td><input type="text" id="" name=""></td>
+				<td><input type="month" id="" name="" value="2022-01"> ~ <input type="month" id="" name="" value="2022-01"></td>
+				<td><input type="text" id="" name=""></td>
+				<td><input type="text" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>2</th>
+				<td><input type="text" id="" name=""></td>
+				<td><input type="month" id="" name="" value="2022-01"> ~ <input type="month" id="" name="" value="2022-01"></td>
+				<td><input type="text" id="" name=""></td>
+				<td><input type="text" id="" name=""></td>
+			</tr>
+
+		</table>
+	</form>
 </body>
 </html>
