--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -1,12 +1,149 @@
 <!DOCTYPE HTML>
-<html lang="ko">
-<head></head>
+<html lang="kor">
+
+<head>
+<meta charset="uTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Yun html projects memberView</title>
+
+<style type="text/css">
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th, td {
+	padding: 8px;
+}
+</style>
+
+</head>
+
 <body>
+	memberView.html
+
+	<table border="1">
+	<caption><b>회원정보</b></caption>
+		<tr>
+			<th>이름</th>
+			<td>윤영민</td>
+			<th>성별</th>
+			<td>남</td>
+		</tr>
+		<tr>
+			<th>아이디</th>
+			<td>yym2044</td>
+			<th>비밀번호</th>
+			<td>*********</td>
+		</tr>
+		<tr>
+			<th>생일</th>
+			<td>1996.06.07</td>
+			<th>국적</th>
+			<td>대한민국</td>
+		</tr>
+		<tr>
+			<th>주소</th>
+			<td colspan="3">경기도 남양주시</td>
+		</tr>
+		<tr>
+			<th>모바일</th>
+			<td>010-1234-5678</td>
+			<th>모바일 마케팅 수신 동의</th>
+			<td>예</td>
+		</tr>
+		<tr>
+			<th>전화번호</th>
+			<td>031-123-4567</td>
+			<th>팩스번호</th>
+			<td>12346576</td>
+		</tr>
+		<tr>
+			<th>이메일</th>
+			<td>yym2044@naver.com</td>
+			<th>이메일 마케팅 수신 동의</th>
+			<td>예</td>
+
+		</tr>
+
+		<tr>
+			<th>추천인</th>
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<th>비밀번호 문제</th>
+			<td></td>
+			<th>비밀번호 답</th>
+			<td>asdfagdsa</td>
+		</tr>
 
 
+		<tr>
+			<th>sns</th>
+			<td><select><option>insta</option>
+					<option>facebook</option>
+					<option>twitter</option></select></td>
+			<th>사진</th>
+			<td><img src="./winter.jpeg" width="100"></td>
+		</tr>
+		<tr>
+			<th>홈페이지</th>
+			<td>blog.naver.com/~~</td>
+			<th>희망 직업</th>
+			<td>개발자</td>
+		</tr>
+		<tr>
+			<th>취미</th>
+			<td colspan="3">등산, 영화, 스마트폰</td>
+		</tr>
+		<tr>
+			<th>결혼여부</th>
+			<td>아니오</td>
+			<th>결혼기념일</th>
+			<td>-</td>
+		</tr>
+		<tr>
+			<th>자녀유무</th>
+			<td>-</td>
 
+			<th>좋아하는 색깔</th>
+			<td>#000000</td>
+		</tr>
+		<tr>
+			<th>본인 소개</th>
+			<td colspan="3">안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다.</td>
+		</tr>
+		<tr>
+			<th>개인정보유효기간</th>
+			<td colspan="3">10년</td>
+		</tr>
+	</table>
 
+	<table>
+		<tr>
+			<th>번호</th>
+			<th>프로젝트 이름</th>
+			<th>기간</th>
+			<th>프로젝트 내용</th>
+			<th>발주처</th>
+		</tr>
+		<tr>
+			<th>1</th>
+			<td>웹</td>
+			<td>2020.08~2021.01</td>
+			<td>웹 개발</td>
+			<td></td>
+		</tr>
+		<tr>
+			<th>2</th>
+			<td>안드로이드</td>
+			<td>2021.02~2022.01</td>
+			<td></td>
+			<td></td>
+		</tr>
 
+	</table>
 
 </body>
 </html>
