--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -21,129 +21,151 @@ th, td {
 </head>
 
 <body>
-	memberView.html
+	memberForm.html
+	<form action="" method="get" id="" name="memberEditForm" enctype="multipart/form-data">
+		<table border="1">
+			<caption>
+				<b>회원정보</b>
+			</caption>
+			<tr>
+				<th>이름</th>
+				<td><input type="text" id="" name="" value="윤영민"></td>
+				<th>성별</th>
+				<td><input type="radio" id="" name="gender" checked>남 <input type="radio" id="" name="gender">여</td>
+			</tr>
+			<tr>
+				<th>아이디</th>
+				<td><input type="text" id="" name="" value="yym2044"></td>
+				<th>비밀번호</th>
+				<td><input type="password" id="" name="" value="yym2044"></td>
+			</tr>
+			<tr>
+				<th>생년월일</th>
+				<td><input type="date" id="" name="" value="1996-06-07"></td>
+				<th>국적</th>
+				<td><select>
+						<option>대한민국</option>
+						<option>미국</option>
+						<option>일본</option>
+						<option>영국</option>
+						<option>프랑스</option>
+						<option>이탈리아</option>
+						<option>중국</option>
+				</select></td>
+			</tr>
+			<tr>
+				<th>주소</th>
+				<td colspan="3"><input type="text" id="" name="" size="100" value="경기도 남양주시"></td>
+			</tr>
+			<tr>
+				<th>모바일</th>
+				<td><input type="text" id="" name="" value="01046356670"></td>
+				<th>모바일 마케팅 수신 동의</th>
+				<td><input type="radio" id="" name="mobile_marketing" checked>예 <input type="radio" id=""
+					name="mobile_marketing">아니오</td>
+			</tr>
+			<tr>
+				<th>전화번호</th>
+				<td><input type="text" id="" name="" value="010-1234-5678"></td>
+				<th>팩스번호</th>
+				<td><input type="text" id="" name="" value="12346576"></td>
+			</tr>
+			<tr>
+				<th>이메일</th>
+				<td><input type="email" id="" name="" value="yym2044@naver.com"></td>
+				<th>이메일 마케팅 수신 동의</th>
+				<td><input type="radio" id="" name="email_marketing" checked>예 <input type="radio" id="" name="email_marketing">아니오</td>
 
-	<table border="1">
-	<caption><b>회원정보</b></caption>
-		<tr>
-			<th>이름</th>
-			<td>윤영민</td>
-			<th>성별</th>
-			<td>남</td>
-		</tr>
-		<tr>
-			<th>아이디</th>
-			<td>yym2044</td>
-			<th>비밀번호</th>
-			<td>*********</td>
-		</tr>
-		<tr>
-			<th>생일</th>
-			<td>1996.06.07</td>
-			<th>국적</th>
-			<td>대한민국</td>
-		</tr>
-		<tr>
-			<th>주소</th>
-			<td colspan="3">경기도 남양주시</td>
-		</tr>
-		<tr>
-			<th>모바일</th>
-			<td>010-1234-5678</td>
-			<th>모바일 마케팅 수신 동의</th>
-			<td>예</td>
-		</tr>
-		<tr>
-			<th>전화번호</th>
-			<td>031-123-4567</td>
-			<th>팩스번호</th>
-			<td>12346576</td>
-		</tr>
-		<tr>
-			<th>이메일</th>
-			<td>yym2044@naver.com</td>
-			<th>이메일 마케팅 수신 동의</th>
-			<td>예</td>
+			</tr>
 
-		</tr>
-
-		<tr>
-			<th>추천인</th>
-			<td colspan="3"></td>
-		</tr>
-		<tr>
-			<th>비밀번호 문제</th>
-			<td></td>
-			<th>비밀번호 답</th>
-			<td>asdfagdsa</td>
-		</tr>
+			<tr>
+				<th>추천인</th>
+				<td colspan="3"><input type="text" id="" name="" value="김하나"> <input type="text" id="" name="" value="김둘"> <input
+					type="text" id="" name="" value="김셋"></td>
+			</tr>
+			<tr>
+				<th>비밀번호 문제</th>
+				<td><select>
+						<option>나의 보물 1호는?</option>
+						<option selected>나의 고향은?</option>
+						<option>내가 키우는 애완동물의 이름은?</option>
+						<option>가장 친한 친구 이름은?</option>
+				</select></td>
+				<th>비밀번호 답</th>
+				<td><input type="text" id="" name="" value="정읍"></td>
+			</tr>
 
 
-		<tr>
-			<th>sns</th>
-			<td><select><option>insta</option>
-					<option>facebook</option>
-					<option>twitter</option></select></td>
-			<th>사진</th>
-			<td><img src="./winter.jpeg" width="100"></td>
-		</tr>
-		<tr>
-			<th>홈페이지</th>
-			<td>blog.naver.com/~~</td>
-			<th>희망 직업</th>
-			<td>개발자</td>
-		</tr>
-		<tr>
-			<th>취미</th>
-			<td colspan="3">등산, 영화, 스마트폰</td>
-		</tr>
-		<tr>
-			<th>결혼여부</th>
-			<td>아니오</td>
-			<th>결혼기념일</th>
-			<td>-</td>
-		</tr>
-		<tr>
-			<th>자녀유무</th>
-			<td>-</td>
+			<tr>
+				<th>sns</th>
+				<td><select><option>insta</option>
+						<option selected>facebook</option>
+						<option>twitter</option></select></td>
+				<th>사진</th>
+				<td><input type="file" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>홈페이지</th>
+				<td><input type="text" id="" name="" value="blog.naver.com/~~"></td>
+				<th>희망 직업</th>
+				<td><input type="text" id="" name="" value="개발자"></td>
+			</tr>
+			<tr>
+				<th>취미</th>
+				<td colspan="3"><input type="text" id="" name="" value="등산, 영화, 스마트폰"></td>
+			</tr>
+			<tr>
+				<th>결혼여부</th>
+				<td><input type="radio" id="" name="marriage">예 <input type="radio" id="" name="marriage" checked>아니오</td>
+				<th>결혼기념일</th>
+				<td>-</td>
+			</tr>
+			<tr>
+				<th>자녀유무</th>
+				<td>-</td>
 
-			<th>좋아하는 색깔</th>
-			<td>#000000</td>
-		</tr>
-		<tr>
-			<th>본인 소개</th>
-			<td colspan="3">안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다.</td>
-		</tr>
-		<tr>
-			<th>개인정보유효기간</th>
-			<td colspan="3">10년</td>
-		</tr>
-	</table>
+				<th>좋아하는 색깔</th>
+				<td><input type="color" id="" name=""></td>
+			</tr>
+			<tr>
+				<th>본인 소개</th>
+				<td colspan="3"><input type="text" id="" name="" size="100" value="안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다."></td>
+			</tr>
+			<tr>
+				<th>개인정보유효기간</th>
+				<td colspan="3"><select>
+						<option>1년</option>
+						<option>3년</option>
+						<option>5년</option>
+						<option selected>10년</option>
+				</select></td>
+			</tr>
+		</table>
 
-	<table>
-		<tr>
-			<th>번호</th>
-			<th>프로젝트 이름</th>
-			<th>기간</th>
-			<th>프로젝트 내용</th>
-			<th>발주처</th>
-		</tr>
-		<tr>
-			<th>1</th>
-			<td>웹</td>
-			<td>2020.08~2021.01</td>
-			<td>웹 개발</td>
-			<td></td>
-		</tr>
-		<tr>
-			<th>2</th>
-			<td>안드로이드</td>
-			<td>2021.02~2022.01</td>
-			<td></td>
-			<td></td>
-		</tr>
+		<table>
+			<tr>
+				<th>번호</th>
+				<th>프로젝트 이름</th>
+				<th>기간</th>
+				<th>프로젝트 내용</th>
+				<th>발주처</th>
+			</tr>
+			<tr>
+				<th>1</th>
+				<td><input type="text" id="" name="" value="웹"></td>
+				<td><input type="month" id="" name="" value="2020-08"> ~ <input type="month" id="" name="" value="2021-01"></td>
+				<td><input type="text" id="" name="" value="웹 개발"></td>
+				<td><input type="text" id="" name="" value="자체개발"></td>
+			</tr>
+			<tr>
+				<th>2</th>
+				<td><input type="text" id="" name="" value="안드로이드"></td>
+				<td><input type="month" id="" name="" value="2021-02"> ~ <input type="month" id="" name="" value="2022-01"></td>
+				<td><input type="text" id="" name="" value="안드로이드 개발"></td>
+				<td><input type="text" id="" name="" value="자체개발"></td>
+			</tr>
 
-	</table>
-
+		</table>
+	</form>
 </body>
 </html>
