--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -22,7 +22,7 @@ th, td {
 
 <body>
 	memberForm.html
-	<form action="" method="get" id="" name="" enctype="multipart/form-data">
+	<form action="" method="get" id="" name="memberRegisterForm" enctype="multipart/form-data">
 		<table border="1">
 			<caption>
 				<b>회원정보</b>
