--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -69,7 +69,7 @@ th, td {
 
 		<tr>
 			<th>추천인</th>
-			<td colspan="3"></td>
+			<td colspan="3">김하나, 김둘, 김셋</td>
 		</tr>
 		<tr>
 			<th>비밀번호 문제</th>
@@ -81,9 +81,7 @@ th, td {
 
 		<tr>
 			<th>sns</th>
-			<td><select><option>insta</option>
-					<option>facebook</option>
-					<option>twitter</option></select></td>
+			<td>facebook</td>
 			<th>사진</th>
 			<td><img src="./winter.jpeg" width="100"></td>
 		</tr>
@@ -133,14 +131,14 @@ th, td {
 			<td>웹</td>
 			<td>2020.08~2021.01</td>
 			<td>웹 개발</td>
-			<td></td>
+			<td>자체개발</td>
 		</tr>
 		<tr>
 			<th>2</th>
 			<td>안드로이드</td>
 			<td>2021.02~2022.01</td>
-			<td></td>
-			<td></td>
+			<td>안드로이드 개발</td>
+			<td>자체개발</td>
 		</tr>
 
 	</table>
