--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -74,14 +74,15 @@ th, td {
 				<th>이메일</th>
 				<td><input type="email" id="" name="" value="yym2044@naver.com"></td>
 				<th>이메일 마케팅 수신 동의</th>
-				<td><input type="radio" id="" name="email_marketing" checked>예 <input type="radio" id="" name="email_marketing">아니오</td>
+				<td><input type="radio" id="" name="email_marketing" checked>예 <input type="radio" id=""
+					name="email_marketing">아니오</td>
 
 			</tr>
 
 			<tr>
 				<th>추천인</th>
-				<td colspan="3"><input type="text" id="" name="" value="김하나"> <input type="text" id="" name="" value="김둘"> <input
-					type="text" id="" name="" value="김셋"></td>
+				<td colspan="3"><input type="text" id="" name="" value="김하나"> <input type="text" id="" name=""
+					value="김둘"> <input type="text" id="" name="" value="김셋"></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
@@ -122,7 +123,8 @@ th, td {
 			</tr>
 			<tr>
 				<th>자녀유무</th>
-				<td>-</td>
+				<td><input type="radio" id="" name="child">예<input type="radio" id="" name="child" checked>아니오</td>
+
 
 				<th>좋아하는 색깔</th>
 				<td><input type="color" id="" name=""></td>
@@ -153,14 +155,16 @@ th, td {
 			<tr>
 				<th>1</th>
 				<td><input type="text" id="" name="" value="웹"></td>
-				<td><input type="month" id="" name="" value="2020-08"> ~ <input type="month" id="" name="" value="2021-01"></td>
+				<td><input type="month" id="" name="" value="2020-08"> ~ <input type="month" id="" name=""
+					value="2021-01"></td>
 				<td><input type="text" id="" name="" value="웹 개발"></td>
 				<td><input type="text" id="" name="" value="자체개발"></td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td><input type="text" id="" name="" value="안드로이드"></td>
-				<td><input type="month" id="" name="" value="2021-02"> ~ <input type="month" id="" name="" value="2022-01"></td>
+				<td><input type="month" id="" name="" value="2021-02"> ~ <input type="month" id="" name=""
+					value="2022-01"></td>
 				<td><input type="text" id="" name="" value="안드로이드 개발"></td>
 				<td><input type="text" id="" name="" value="자체개발"></td>
 			</tr>
