--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -122,7 +122,7 @@ th, td {
 			</tr>
 			<tr>
 				<th>자녀유무</th>
-				<td>-</td>
+				<td><input type="radio" id="" name="child">예<input type="radio" id="" name="child">아니오</td>
 
 				<th>좋아하는 색깔</th>
 				<td><input type="color" id="" name=""></td>
