--- a/public/apple/member/memberList.html
+++ b/public/apple/member/memberList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="kor">
+<html lang="ko">
 <head>
 <meta charset="uTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,16 +31,16 @@ th, td {
 			<th>아이디</th>
 			<th>비번</th>
 			<th>이메일</th>
-			<th>생일</th>
+			<th>생년월일일</th>
 			<th>연락처</th>
 		</tr>
 		<tr>
-			<td><a href="./memberView.html">윤하나</a></td>
-			<td>여</td>
-			<td>hana</td>
+			<td><a href="./memberView.html">윤영민</a></td>
+			<td>남</td>
+			<td>yym2044</td>
 			<td>111</td>
-			<td>hana@naver.com</td>
-			<td>0101</td>
+			<td>yym@naver.com</td>
+			<td>960607</td>
 			<td>01011111111</td>
 		</tr>
 		<tr>
@@ -49,7 +49,7 @@ th, td {
 			<td>dool</td>
 			<td>222</td>
 			<td>dool@naver.com</td>
-			<td>0202</td>
+			<td>920222</td>
 			<td>01022222222</td>
 		</tr>
 		<tr>
@@ -58,7 +58,7 @@ th, td {
 			<td>set</td>
 			<td>333</td>
 			<td>set@google.com</td>
-			<td>0303</td>
+			<td>930303</td>
 			<td>01033333333</td>
 		</tr>
 		<tr>
@@ -67,7 +67,7 @@ th, td {
 			<td>net</td>
 			<td>444</td>
 			<td>net@daum.net</td>
-			<td>0404</td>
+			<td>940404</td>
 			<td>01044444444</td>
 		</tr>
 	</table>
