--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -100,7 +100,9 @@ th, td {
 				<th>sns</th>
 				<td><select><option>insta</option>
 						<option>facebook</option>
-						<option>twitter</option></select></td>
+						<option>twitter</option></select>
+						<input type="text" id="" name="">
+						</td>
 				<th>사진</th>
 				<td><input type="file" id="" name=""></td>
 			</tr>
@@ -112,7 +114,16 @@ th, td {
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3"><input type="text" id="" name=""></td>
+				<td colspan="3">
+				<input type="checkbox" id="" name="hobby" value="movie">영화시청
+				<input type="checkbox" id="" name="hobby" value="smartphone">스마트폰
+				<input type="checkbox" id="" name="hobby" value = "reading">독서
+				<input type="checkbox" id="" name="hobby" value = "music">음악감상
+				<input type="checkbox" id="" name="hobby" value= "instrument">악기연주
+				<input type="checkbox" id="" name="hobby" value = "boardgame">보드게임
+				<input type="checkbox" id="" name="hobby" value = "foodtour">맛집탐방
+				<input type="checkbox" id="" name="hobby" value = "sports">스포츠
+				</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
@@ -145,7 +156,7 @@ th, td {
 		<table>
 			<tr>
 				<th>번호</th>
-				<th>프로젝트 이름</th>
+				<th>프로젝트명</th>
 				<th>기간</th>
 				<th>프로젝트 내용</th>
 				<th>발주처</th>
@@ -166,6 +177,9 @@ th, td {
 			</tr>
 
 		</table>
+		
 	</form>
+	
+	<a href="./memberList.html">목록</a>
 </body>
 </html>
