--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -24,7 +24,9 @@ th, td {
 	memberView.html
 
 	<table border="1">
-	<caption><b>회원정보</b></caption>
+		<caption>
+			<b>회원정보</b>
+		</caption>
 		<tr>
 			<th>이름</th>
 			<td>윤영민</td>
@@ -93,7 +95,7 @@ th, td {
 		</tr>
 		<tr>
 			<th>취미</th>
-			<td colspan="3">등산, 영화, 스마트폰</td>
+			<td colspan="3">스마트폰, 음악감상, 스포츠</td>
 		</tr>
 		<tr>
 			<th>결혼여부</th>
@@ -121,7 +123,7 @@ th, td {
 	<table>
 		<tr>
 			<th>번호</th>
-			<th>프로젝트 이름</th>
+			<th>프로젝트명</th>
 			<th>기간</th>
 			<th>프로젝트 내용</th>
 			<th>발주처</th>
@@ -142,6 +144,8 @@ th, td {
 		</tr>
 
 	</table>
-
+	<a href="./memberList.html">목록</a>
+	<a href="./memberEdit.html">수정</a>
+	<a href="./memberList.html">삭제</a>
 </body>
 </html>
