--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -21,7 +21,7 @@ th, td {
 </head>
 
 <body>
-	memberForm.html
+	memberEdit.html
 	<form action="" method="get" id="" name="memberEditForm" enctype="multipart/form-data">
 		<table border="1">
 			<caption>
@@ -62,7 +62,8 @@ th, td {
 				<td><input type="text" id="" name="" value="01046356670"></td>
 				<th>모바일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="mobile_marketing" checked>예 <input type="radio" id=""
-					name="mobile_marketing">아니오</td>
+					name="mobile_marketing"
+				>아니오</td>
 			</tr>
 			<tr>
 				<th>전화번호</th>
@@ -75,14 +76,16 @@ th, td {
 				<td><input type="email" id="" name="" value="yym2044@naver.com"></td>
 				<th>이메일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="email_marketing" checked>예 <input type="radio" id=""
-					name="email_marketing">아니오</td>
+					name="email_marketing"
+				>아니오</td>
 
 			</tr>
 
 			<tr>
 				<th>추천인</th>
 				<td colspan="3"><input type="text" id="" name="" value="김하나"> <input type="text" id="" name=""
-					value="김둘"> <input type="text" id="" name="" value="김셋"></td>
+					value="김둘"
+				> <input type="text" id="" name="" value="김셋"></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
@@ -101,7 +104,7 @@ th, td {
 				<th>sns</th>
 				<td><select><option>insta</option>
 						<option selected>facebook</option>
-						<option>twitter</option></select></td>
+						<option>twitter</option></select> <input type="text" id="" name=""></td>
 				<th>사진</th>
 				<td><input type="file" id="" name=""></td>
 			</tr>
@@ -113,7 +116,17 @@ th, td {
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3"><input type="text" id="" name="" value="등산, 영화, 스마트폰"></td>
+				<td colspan="3">
+				<input type="checkbox" id="" name="hobby" value ="movie">영화시청
+				<input type="checkbox" id="" name="hobby" value ="smartphone" checked>스마트폰
+				<input type="checkbox" id="" name="hobby" value = "reading">독서
+				<input type="checkbox" id="" name="hobby" value = "music" checked>음악감상
+				<input type="checkbox" id="" name="hobby" value = "instrument">악기연주
+				<input type="checkbox" id="" name="hobby" value = "boardgame">보드게임
+				<input type="checkbox" id="" name="hobby" value = "foodtour">맛집탐방
+				<input type="checkbox" id="" name="hobby" value = "sports" checked>스포츠
+				
+				</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
@@ -147,7 +160,7 @@ th, td {
 		<table>
 			<tr>
 				<th>번호</th>
-				<th>프로젝트 이름</th>
+				<th>프로젝트명</th>
 				<th>기간</th>
 				<th>프로젝트 내용</th>
 				<th>발주처</th>
@@ -156,7 +169,8 @@ th, td {
 				<th>1</th>
 				<td><input type="text" id="" name="" value="웹"></td>
 				<td><input type="month" id="" name="" value="2020-08"> ~ <input type="month" id="" name=""
-					value="2021-01"></td>
+					value="2021-01"
+				></td>
 				<td><input type="text" id="" name="" value="웹 개발"></td>
 				<td><input type="text" id="" name="" value="자체개발"></td>
 			</tr>
@@ -164,12 +178,14 @@ th, td {
 				<th>2</th>
 				<td><input type="text" id="" name="" value="안드로이드"></td>
 				<td><input type="month" id="" name="" value="2021-02"> ~ <input type="month" id="" name=""
-					value="2022-01"></td>
+					value="2022-01"
+				></td>
 				<td><input type="text" id="" name="" value="안드로이드 개발"></td>
 				<td><input type="text" id="" name="" value="자체개발"></td>
 			</tr>
 
 		</table>
 	</form>
+	<a href="./memberList.html">목록</a>
 </body>
 </html>
