--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -59,7 +59,13 @@ th, td {
 			</tr>
 			<tr>
 				<th>모바일</th>
-				<td><input type="text" id="" name="" value="01046356670"></td>
+				<td><select>
+						<option selected>SKT
+						<option>KT
+						<option>LG
+				</select> <input type="text" id="" name="" size="3" value="010">-<input type="text" id="" name="" size="4"
+					value="4635"
+				>-<input type="text" id="" name="" size="4" value="6670"></td>
 				<th>모바일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="mobile_marketing" checked>예 <input type="radio" id=""
 					name="mobile_marketing"
@@ -67,7 +73,27 @@ th, td {
 			</tr>
 			<tr>
 				<th>전화번호</th>
-				<td><input type="text" id="" name="" value="010-1234-5678"></td>
+				<td><select>
+						<option>02
+						<option selected>031
+						<option>032
+						<option>033
+						<option>041
+						<option>042
+						<option>043
+						<option>044
+						<option>051
+						<option>052
+						<option>053
+						<option>054
+						<option>055
+						<option>061
+						<option>062
+						<option>063
+						<option>064
+				</select> -<input type="text" id="" name="" size="3" value="527">- <input type="text" id="" name="" size="4"
+					value="6685"
+				></td>
 				<th>팩스번호</th>
 				<td><input type="text" id="" name="" value="12346576"></td>
 			</tr>
@@ -116,17 +142,15 @@ th, td {
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3">
-				<input type="checkbox" id="" name="hobby" value ="movie">영화시청
-				<input type="checkbox" id="" name="hobby" value ="smartphone" checked>스마트폰
-				<input type="checkbox" id="" name="hobby" value = "reading">독서
-				<input type="checkbox" id="" name="hobby" value = "music" checked>음악감상
-				<input type="checkbox" id="" name="hobby" value = "instrument">악기연주
-				<input type="checkbox" id="" name="hobby" value = "boardgame">보드게임
-				<input type="checkbox" id="" name="hobby" value = "foodtour">맛집탐방
-				<input type="checkbox" id="" name="hobby" value = "sports" checked>스포츠
-				
-				</td>
+				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
+					id="" name="hobby" value="smartphone" checked
+				>스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서 <input type="checkbox" id=""
+					name="hobby" value="music" checked
+				>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <input type="checkbox" id=""
+					name="hobby" value="boardgame"
+				>보드게임 <input type="checkbox" id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id=""
+					name="hobby" value="sports" checked
+				>스포츠</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
