--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -59,14 +59,40 @@ th, td {
 			</tr>
 			<tr>
 				<th>모바일</th>
-				<td><input type="text" id="" name=""></td>
+				<td><select>
+						<option>SKT
+						<option>KT
+						<option>LG
+				</select> <input type="text" id="" name="" size="3">-<input type="text" id="" name="" size="4">-<input
+					type="text" id="" name="" size="4"
+				></td>
 				<th>모바일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="mobile_marketing">예 <input type="radio" id=""
-					name="mobile_marketing">아니오</td>
+					name="mobile_marketing"
+				>아니오</td>
 			</tr>
 			<tr>
 				<th>전화번호</th>
-				<td><input type="text" id="" name=""></td>
+				<td><select>
+
+						<option>02
+						<option>031
+						<option>032
+						<option>033
+						<option>041
+						<option>042
+						<option>043
+						<option>044
+						<option>051
+						<option>052
+						<option>053
+						<option>054
+						<option>055
+						<option>061
+						<option>062
+						<option>063
+						<option>064
+				</select> -<input type="text" id="" name="" size="3">- <input type="text" id="" name="" size="4"></td>
 				<th>팩스번호</th>
 				<td><input type="text" id="" name=""></td>
 			</tr>
@@ -81,7 +107,8 @@ th, td {
 			<tr>
 				<th>추천인</th>
 				<td colspan="3"><input type="text" id="" name=""> <input type="text" id="" name=""> <input
-					type="text" id="" name=""></td>
+					type="text" id="" name=""
+				></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
@@ -100,9 +127,7 @@ th, td {
 				<th>sns</th>
 				<td><select><option>insta</option>
 						<option>facebook</option>
-						<option>twitter</option></select>
-						<input type="text" id="" name="">
-						</td>
+						<option>twitter</option></select> <input type="text" id="" name=""></td>
 				<th>사진</th>
 				<td><input type="file" id="" name=""></td>
 			</tr>
@@ -114,16 +139,15 @@ th, td {
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3">
-				<input type="checkbox" id="" name="hobby" value="movie">영화시청
-				<input type="checkbox" id="" name="hobby" value="smartphone">스마트폰
-				<input type="checkbox" id="" name="hobby" value = "reading">독서
-				<input type="checkbox" id="" name="hobby" value = "music">음악감상
-				<input type="checkbox" id="" name="hobby" value= "instrument">악기연주
-				<input type="checkbox" id="" name="hobby" value = "boardgame">보드게임
-				<input type="checkbox" id="" name="hobby" value = "foodtour">맛집탐방
-				<input type="checkbox" id="" name="hobby" value = "sports">스포츠
-				</td>
+				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
+					id="" name="hobby" value="smartphone"
+				>스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서 <input type="checkbox" id=""
+					name="hobby" value="music"
+				>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <input type="checkbox" id=""
+					name="hobby" value="boardgame"
+				>보드게임 <input type="checkbox" id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id=""
+					name="hobby" value="sports"
+				>스포츠</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
@@ -164,22 +188,26 @@ th, td {
 			<tr>
 				<th>1</th>
 				<td><input type="text" id="" name=""></td>
-				<td><input type="month" id="" name="" value="2022-01"> ~ <input type="month" id="" name="" value="2022-01"></td>
+				<td><input type="month" id="" name="" value="2022-01"> ~ <input type="month" id="" name=""
+					value="2022-01"
+				></td>
 				<td><input type="text" id="" name=""></td>
 				<td><input type="text" id="" name=""></td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td><input type="text" id="" name=""></td>
-				<td><input type="month" id="" name="" value="2022-01"> ~ <input type="month" id="" name="" value="2022-01"></td>
+				<td><input type="month" id="" name="" value="2022-01"> ~ <input type="month" id="" name=""
+					value="2022-01"
+				></td>
 				<td><input type="text" id="" name=""></td>
 				<td><input type="text" id="" name=""></td>
 			</tr>
 
 		</table>
-		
+
 	</form>
-	
+
 	<a href="./memberList.html">목록</a>
 </body>
 </html>
