--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -67,7 +67,7 @@ th, td {
 					name="phone2" size="4" value="4635"
 				> - <input type="text" id="phone3" name="phone3" size="4" value="6670"></td>
 				<th>모바일 마케팅 수신 동의</th>
-				<td><input type="radio" id="mobile_marketing" name="mobile_marketing" valuue="1" checked>예 <input type="radio"
+				<td><input type="radio" id="mobile_marketing" name="mobile_marketing" value="1" checked>예 <input type="radio"
 					id="" name="mobile_marketing" value="2"
 				>아니오</td>
 			</tr>
