--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -22,28 +22,28 @@ th, td {
 
 <body>
 	memberEdit.html
-	<form action="" method="get" id="memberEditForm" name="memberEditForm" enctype="multipart/form-data">
+	<form action="" method="get" id="" name="memberEditForm" enctype="multipart/form-data">
 		<table border="1">
 			<caption>
 				<b>회원정보</b>
 			</caption>
 			<tr>
 				<th>이름</th>
-				<td><input type="text" id="name" name="name" value="윤영민"></td>
+				<td><input type="text" id="" name="name" value="윤영민"></td>
 				<th>성별</th>
-				<td><input type="radio" id="gender" name="gender" checked>남 <input type="radio" id="" name="gender">여</td>
+				<td><input type="radio" id="" name="gender" checked>남 <input type="radio" id="" name="gender">여</td>
 			</tr>
 			<tr>
 				<th>아이디</th>
-				<td><input type="text" id="id" name="id" value="yym2044"></td>
+				<td><input type="text" id="" name="id" value="yym2044"></td>
 				<th>비밀번호</th>
-				<td><input type="password" id="password" name="password" value="yym2044"></td>
+				<td><input type="password" id="" name="password" value="yym2044"></td>
 			</tr>
 			<tr>
 				<th>생년월일</th>
-				<td><input type="date" id="birthDate" name="birthDate" value="1996-06-07"></td>
+				<td><input type="date" id="" name="birthDate" value="1996-06-07"></td>
 				<th>국적</th>
-				<td><select id="country" name="country">
+				<td><select id="" name="country">
 						<option>대한민국</option>
 						<option>미국</option>
 						<option>일본</option>
@@ -55,25 +55,25 @@ th, td {
 			</tr>
 			<tr>
 				<th>주소</th>
-				<td colspan="3"><input type="text" id="address" name="address" size="100" value="경기도 남양주시"></td>
+				<td colspan="3"><input type="text" id="" name="address" size="100" value="경기도 남양주시"></td>
 			</tr>
 			<tr>
 				<th>모바일</th>
-				<td><select id="carrier" name="carrier">
+				<td><select id="" name="carrier">
 						<option selected>SKT
 						<option>KT
 						<option>LG
-				</select> <input type="text" id="phone1" name="phone1" size="3" value="010"> - <input type="text" id="phone2"
+				</select> <input type="text" id="" name="phone1" size="3" value="010"> - <input type="text" id=""
 					name="phone2" size="4" value="4635"
-				> - <input type="text" id="phone3" name="phone3" size="4" value="6670"></td>
+				> - <input type="text" id="" name="phone3" size="4" value="6670"></td>
 				<th>모바일 마케팅 수신 동의</th>
-				<td><input type="radio" id="mobile_marketing" name="mobile_marketing" value="1" checked>예 <input type="radio"
+				<td><input type="radio" id="" name="mobile_marketing" value="1" checked>예 <input type="radio"
 					id="" name="mobile_marketing" value="2"
 				>아니오</td>
 			</tr>
 			<tr>
 				<th>전화번호</th>
-				<td><select id="homeNumber1" name="homeNumber2">
+				<td><select id="" name="homeNumber2">
 						<option>02
 						<option selected>031
 						<option>032
@@ -91,88 +91,88 @@ th, td {
 						<option>062
 						<option>063
 						<option>064
-				</select> - <input type="text" id="homeNumber2" name="homeNumber2" size="3" value="527"> - <input type="text"
-					id="homeNumber3" name="homeNumber3" size="4" value="6685"
+				</select> - <input type="text" id="" name="homeNumber2" size="3" value="527"> - <input type="text"
+					id="" name="homeNumber3" size="4" value="6685"
 				></td>
 				<th>팩스번호</th>
-				<td><input type="text" id="faxNumber" name="faxNumber" value="12346576"></td>
+				<td><input type="text" id="" name="faxNumber" value="12346576"></td>
 			</tr>
 			<tr>
 				<th>이메일</th>
-				<td><input type="email" id="email" name="email" value="yym2044@naver.com"></td>
+				<td><input type="email" id="" name="email" value="yym2044@naver.com"></td>
 				<th>이메일 마케팅 수신 동의</th>
-				<td><input type="radio" id="email_marketing" name="email_marketing" value="1" checked>예 <input type="radio"
-					id="email_marketing" name="email_marketing" value="2"
+				<td><input type="radio" id="" name="email_marketing" value="1" checked>예 <input type="radio"
+					id="" name="email_marketing" value="2"
 				>아니오</td>
 
 			</tr>
 
 			<tr>
 				<th>추천인</th>
-				<td colspan="3"><input type="text" id="recommender1" name="recommender1" value="김하나"> <input
-					type="text" id="recommender2" name="recommender2" value="김둘"
-				> <input type="text" id="recommender3" name="recommender3" value="김셋"></td>
+				<td colspan="3"><input type="text" id="" name="recommender1" value="김하나"> <input
+					type="text" id="" name="recommender2" value="김둘"
+				> <input type="text" id="" name="recommender3" value="김셋"></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
-				<td><select id="pwQuestion" name="pwQuestion">
+				<td><select id="" name="pwQuestion">
 						<option>나의 보물 1호는?</option>
 						<option selected>나의 고향은?</option>
 						<option>내가 키우는 애완동물의 이름은?</option>
 						<option>가장 친한 친구 이름은?</option>
 				</select></td>
 				<th>비밀번호 답</th>
-				<td><input type="text" id="pwAnswer" name="pwAnswer" value="정읍"></td>
+				<td><input type="text" id="" name="pwAnswer" value="정읍"></td>
 			</tr>
 
 
 			<tr>
 				<th>sns</th>
-				<td><select id="sns" name="sns"><option>insta</option>
+				<td><select id="" name="sns"><option>insta</option>
 						<option selected>facebook</option>
-						<option>twitter</option></select> <input type="text" id="snsText" name="snsText"></td>
+						<option>twitter</option></select> <input type="text" id="" name="snsText"></td>
 				<th>사진</th>
-				<td><input type="file" id="photo" name="photo"></td>
+				<td><input type="file" id="" name="photo"></td>
 			</tr>
 			<tr>
 				<th>홈페이지</th>
-				<td><input type="text" id="homepage" name="homepage" value="blog.naver.com/~~"></td>
+				<td><input type="text" id="" name="homepage" value="blog.naver.com/~~"></td>
 				<th>희망 직업</th>
-				<td><input type="text" id="jobSeek" name="jobSeek" value="개발자"></td>
+				<td><input type="text" id="" name="jobSeek" value="개발자"></td>
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3"><input type="checkbox" id="hobby" name="hobby" value="movie">영화시청 <input
-					type="checkbox" id="hobby" name="hobby" value="smartphone" checked
-				>스마트폰 <input type="checkbox" id="hobby" name="hobby" value="reading">독서 <input type="checkbox" id="hobby"
+				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input
+					type="checkbox" id="" name="hobby" value="smartphone" checked
+				>스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서 <input type="checkbox" id=""
 					name="hobby" value="music" checked
-				>음악감상 <input type="checkbox" id="hobby" name="hobby" value="instrument">악기연주 <input type="checkbox" id="hobby"
+				>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <input type="checkbox" id=""
 					name="hobby" value="boardgame"
-				>보드게임 <input type="checkbox" id="hobby" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id="hobby"
+				>보드게임 <input type="checkbox" id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id=""
 					name="hobby" value="sports" checked
 				>스포츠</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
-				<td><input type="radio" id="marriage" name="marriage" value="1">예 <input type="radio" id="marriage" name="marriage" value="2" checked>아니오</td>
+				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id="" name="marriage" value="2" checked>아니오</td>
 				<th>결혼기념일</th>
 				<td>-</td>
 			</tr>
 			<tr>
 				<th>자녀유무</th>
-				<td><input type="radio" id="child" name="child" value="1">예<input type="radio" id="child" name="child" value="2" checked>아니오</td>
+				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2" checked>아니오</td>
 
 
 				<th>좋아하는 색깔</th>
-				<td><input type="color" id="color" name="color"></td>
+				<td><input type="color" id="" name="color"></td>
 			</tr>
 			<tr>
 				<th>본인 소개</th>
-				<td colspan="3"><textarea id="introduce" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">안녕하세요 반갑습니다 저는 윤영민이라고 합니다 잘 부탁드립니다.</textarea></td>
+				<td colspan="3"><textarea id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">안녕하세요 반갑습니다 저는 윤영민이라고 합니다 잘 부탁드립니다.</textarea></td>
 			</tr>
 			<tr>
 				<th>개인정보유효기간</th>
-				<td colspan="3"><select id="expireDate" name="expireDate">
+				<td colspan="3"><select id="" name="expireDate">
 						<option>1년</option>
 						<option>3년</option>
 						<option>5년</option>
@@ -191,21 +191,21 @@ th, td {
 			</tr>
 			<tr>
 				<th>1</th>
-				<td><input type="text" id="projectName1" name="projectName1" value="웹"></td>
-				<td><input type="month" id="term1" name="term1" value="2020-08"> ~ <input type="month" id="" name=""
+				<td><input type="text" id="" name="projectName1" value="웹"></td>
+				<td><input type="month" id="" name="term1s" value="2020-08"> ~ <input type="month" id="" name="term1e"
 					value="2021-01"
 				></td>
-				<td><textarea id="contents1" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
-				<td><input type="text" id="buyer1" name="buyer1" value="자체개발"></td>
+				<td><textarea id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
+				<td><input type="text" id="" name="buyer1" value="자체개발"></td>
 			</tr>
 			<tr>
 				<th>2</th>
-				<td><input type="text" id="projectName2" name="projectName2" value="안드로이드"></td>
-				<td><input type="month" id="term2" name="term2" value="2021-02"> ~ <input type="month" id="" name=""
+				<td><input type="text" id="" name="projectName2" value="안드로이드"></td>
+				<td><input type="month" id="" name="term2s" value="2021-02"> ~ <input type="month" id="" name="term2e"
 					value="2022-01"
 				></td>
-				<td><textarea id="contents2" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
-				<td><input type="text" id="buyer2" name="buyer2" value="자체개발"></td>
+				<td><textarea id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
+				<td><input type="text" id="" name="buyer2" value="자체개발"></td>
 			</tr>
 
 		</table>
