--- a/public/apple/member/memberForm.html
+++ b/public/apple/member/memberForm.html
@@ -63,13 +63,11 @@ th, td {
 						<option>SKT
 						<option>KT
 						<option>LG
-				</select> <input type="text" id="" name="phone1" size="3"> - <input type="text" id="" name="phone2"
-					size="4"
-				> - <input type="text" id="" name="phone3" size="4"></td>
+				</select> <input type="text" id="" name="phone1" size="3"> - <input type="text" id="" name="phone2" size="4">
+					- <input type="text" id="" name="phone3" size="4"></td>
 				<th>모바일 마케팅 수신 동의</th>
-				<td><input type="radio" id="" name="mobile_marketing" value="1">예 <input type="radio"
-					id="" name="mobile_marketing" value="2"
-				>아니오</td>
+				<td><input type="radio" id="" name="mobile_marketing" value="1">예 <input type="radio" id=""
+					name="mobile_marketing" value="2">아니오</td>
 			</tr>
 			<tr>
 				<th>전화번호</th>
@@ -92,25 +90,24 @@ th, td {
 						<option>062
 						<option>063
 						<option>064
-				</select> - <input type="text" id="" name="homeNumber2" size="3"> - <input type="text" id="" name="homeNumber3" size="4"></td>
+				</select> - <input type="text" id="" name="homeNumber2" size="3"> - <input type="text" id="" name="homeNumber3"
+					size="4"></td>
 				<th>팩스번호</th>
 				<td><input type="text" id="" name="faxNumber"></td>
 			</tr>
 			<tr>
 				<th>이메일</th>
-				<td><input type="email" id="" name="email"></td>
+				<td><input type="email" id="" name="email" placeholder="abcd@naver.com"></td>
 				<th>이메일 마케팅 수신 동의</th>
-				<td><input type="radio" id="" name="email_marketing" value="1">예 <input type="radio"
-					id="" name="email_marketing" value="2"
-				>아니오</td>
+				<td><input type="radio" id="" name="email_marketing" value="1">예 <input type="radio" id=""
+					name="email_marketing" value="2">아니오</td>
 
 			</tr>
 
 			<tr>
 				<th>추천인</th>
-				<td colspan="3"><input type="text" id="" name="recommender1"> <input type="text"
-					id="" name="recommender2"
-				> <input type="text" id="" name="recommender3"></td>
+				<td colspan="3"><input type="text" id="" name="recommender1"> <input type="text" id=""
+					name="recommender2"> <input type="text" id="" name="recommender3"></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
@@ -131,7 +128,7 @@ th, td {
 						<option>facebook</option>
 						<option>twitter</option></select> <input type="text" id="snsText" name="snsText"></td>
 				<th>사진</th>
-				<td><input type="file" id="" name="photo"></td>
+				<td><input type="file" id="" name="photo" accept=".jpg,.png"></td>
 			</tr>
 			<tr>
 				<th>홈페이지</th>
@@ -141,29 +138,27 @@ th, td {
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input
-					type="checkbox" id="" name="hobby" value="smartphone"
-				>스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서 <input type="checkbox" id=""
-					name="hobby" value="music"
-				>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <input type="checkbox"
-					id="" name="hobby" value="boardgame"
-				>보드게임 <input type="checkbox" id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox"
-					id="" name="hobby" value="sports"
-				>스포츠</td>
+				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
+					id="" name="hobby" value="smartphone">스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서
+					<input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input type="checkbox" id="" name="hobby"
+					value="camping">캠핑 <input type="checkbox" id="" name="hobby" value="music">음악감상 <input
+					type="checkbox" id="" name="hobby" value="instrument">악기연주 <br> <input type="checkbox" id=""
+					name="hobby" value="boardgame">보드게임 <input type="checkbox" id="" name="hobby" value="jog">조깅 <input
+					type="checkbox" id="" name="hobby" value="sow">바느질 <input type="checkbox" id="" name="hobby"
+					value="foodtour">맛집탐방 <input type="checkbox" id="" name="hobby" value="sports">스포츠 <input
+					type="checkbox" id="" name="hobby" value="else">기타</td>
+
 			</tr>
 			<tr>
 				<th>결혼여부</th>
-				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id=""
-					name="marriage" value="2"
-				>아니오</td>
+				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id="" name="marriage"
+					value="2">아니오</td>
 				<th>결혼기념일</th>
 				<td>-</td>
 			</tr>
 			<tr>
 				<th>자녀유무</th>
-				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child"
-					value="2"
-				>아니오</td>
+				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2">아니오</td>
 
 				<th>좋아하는 색깔</th>
 				<td><input type="color" id="" name="color"></td>
@@ -194,18 +189,16 @@ th, td {
 			<tr>
 				<th>1</th>
 				<td><input type="text" id="" name="projectName1"></td>
-				<td><input type="month" id="" name="term1S" value="2022-01"> ~ <input type="month" id="" name="term1E"
-					value="2022-01"
-				></td>
+				<td>시작일 : <input type="month" id="" name="term1S" value="2022-01"> ~ 종료일 : <input type="month" id=""
+					name="term1E" value="2022-01"></td>
 				<td><textarea id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요."></textarea></td>
 				<td><input type="text" id="" name="buyer1"></td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td><input type="text" id="" name="projectName2"></td>
-				<td><input type="month" id="" name="term2S" value="2022-01"> ~ <input type="month" id="" name="term2E"
-					value="2022-01"
-				></td>
+				<td>시작일 : <input type="month" id="" name="term2S" value="2022-01"> ~ 종료일 : <input type="month" id=""
+					name="term2E" value="2022-01"></td>
 				<td><textarea id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요."></textarea></td>
 				<td><input type="text" id="" name="buyer2"></td>
 			</tr>
