--- a/public/apple/member/memberView.html
+++ b/public/apple/member/memberView.html
@@ -111,7 +111,7 @@ th, td {
 			<td>#000000</td>
 		</tr>
 		<tr>
-			<th>본인 소개</th>
+			<th height="200">본인 소개</th>
 			<td colspan="3">안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다.</td>
 		</tr>
 		<tr>
@@ -125,7 +125,7 @@ th, td {
 			<th>번호</th>
 			<th>프로젝트명</th>
 			<th>기간</th>
-			<th>프로젝트 내용</th>
+			<th width="500">프로젝트 내용</th>
 			<th>발주처</th>
 		</tr>
 		<tr>
