--- a/public/apple/member/memberEdit.html
+++ b/public/apple/member/memberEdit.html
@@ -63,13 +63,11 @@ th, td {
 						<option selected>SKT
 						<option>KT
 						<option>LG
-				</select> <input type="text" id="" name="phone1" size="3" value="010"> - <input type="text" id=""
-					name="phone2" size="4" value="4635"
-				> - <input type="text" id="" name="phone3" size="4" value="6670"></td>
+				</select> <input type="text" id="" name="phone1" size="3" value="010"> - <input type="text" id="" name="phone2"
+					size="4" value="4635"> - <input type="text" id="" name="phone3" size="4" value="6670"></td>
 				<th>모바일 마케팅 수신 동의</th>
-				<td><input type="radio" id="" name="mobile_marketing" value="1" checked>예 <input type="radio"
-					id="" name="mobile_marketing" value="2"
-				>아니오</td>
+				<td><input type="radio" id="" name="mobile_marketing" value="1" checked>예 <input type="radio" id=""
+					name="mobile_marketing" value="2">아니오</td>
 			</tr>
 			<tr>
 				<th>전화번호</th>
@@ -91,9 +89,8 @@ th, td {
 						<option>062
 						<option>063
 						<option>064
-				</select> - <input type="text" id="" name="homeNumber2" size="3" value="527"> - <input type="text"
-					id="" name="homeNumber3" size="4" value="6685"
-				></td>
+				</select> - <input type="text" id="" name="homeNumber2" size="3" value="527"> - <input type="text" id=""
+					name="homeNumber3" size="4" value="6685"></td>
 				<th>팩스번호</th>
 				<td><input type="text" id="" name="faxNumber" value="12346576"></td>
 			</tr>
@@ -101,17 +98,15 @@ th, td {
 				<th>이메일</th>
 				<td><input type="email" id="" name="email" value="yym2044@naver.com"></td>
 				<th>이메일 마케팅 수신 동의</th>
-				<td><input type="radio" id="" name="email_marketing" value="1" checked>예 <input type="radio"
-					id="" name="email_marketing" value="2"
-				>아니오</td>
+				<td><input type="radio" id="" name="email_marketing" value="1" checked>예 <input type="radio" id=""
+					name="email_marketing" value="2">아니오</td>
 
 			</tr>
 
 			<tr>
 				<th>추천인</th>
-				<td colspan="3"><input type="text" id="" name="recommender1" value="김하나"> <input
-					type="text" id="" name="recommender2" value="김둘"
-				> <input type="text" id="" name="recommender3" value="김셋"></td>
+				<td colspan="3"><input type="text" id="" name="recommender1" value="김하나"> <input type="text" id=""
+					name="recommender2" value="김둘"> <input type="text" id="" name="recommender3" value="김셋"></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
@@ -142,25 +137,27 @@ th, td {
 			</tr>
 			<tr>
 				<th>취미</th>
-				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input
-					type="checkbox" id="" name="hobby" value="smartphone" checked
-				>스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서 <input type="checkbox" id=""
-					name="hobby" value="music" checked
-				>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <input type="checkbox" id=""
-					name="hobby" value="boardgame"
-				>보드게임 <input type="checkbox" id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id=""
-					name="hobby" value="sports" checked
-				>스포츠</td>
+				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
+					id="" name="hobby" value="smartphone" checked>스마트폰 <input type="checkbox" id="" name="hobby"
+					value="reading">독서 <input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input
+					type="checkbox" id="" name="hobby" value="camping">캠핑 <input type="checkbox" id="" name="hobby"
+					value="music" checked>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <br>
+					<input type="checkbox" id="" name="hobby" value="boardgame">보드게임 <input type="checkbox" id="" name="hobby"
+					value="jog">조깅 <input type="checkbox" id="" name="hobby" value="sow">바느질 <input type="checkbox"
+					id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id="" name="hobby" value="sports" checked>스포츠
+					<input type="checkbox" id="" name="hobby" value="else">기타</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
-				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id="" name="marriage" value="2" checked>아니오</td>
+				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id="" name="marriage"
+					value="2" checked>아니오</td>
 				<th>결혼기념일</th>
 				<td>-</td>
 			</tr>
 			<tr>
 				<th>자녀유무</th>
-				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2" checked>아니오</td>
+				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2"
+					checked>아니오</td>
 
 
 				<th>좋아하는 색깔</th>
@@ -192,18 +189,16 @@ th, td {
 			<tr>
 				<th>1</th>
 				<td><input type="text" id="" name="projectName1" value="웹"></td>
-				<td><input type="month" id="" name="term1s" value="2020-08"> ~ <input type="month" id="" name="term1e"
-					value="2021-01"
-				></td>
+				<td>시작일 : <input type="month" id="" name="term1s" value="2020-08"> ~ 종료일 : <input type="month" id=""
+					name="term1e" value="2021-01"></td>
 				<td><textarea id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
 				<td><input type="text" id="" name="buyer1" value="자체개발"></td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td><input type="text" id="" name="projectName2" value="안드로이드"></td>
-				<td><input type="month" id="" name="term2s" value="2021-02"> ~ <input type="month" id="" name="term2e"
-					value="2022-01"
-				></td>
+				<td>시작일 : <input type="month" id="" name="term2s" value="2021-02"> ~ 종료일 : <input type="month" id=""
+					name="term2e" value="2022-01"></td>
 				<td><textarea id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
 				<td><input type="text" id="" name="buyer2" value="자체개발"></td>
 			</tr>
