--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,16 @@
 </head>
 
 <body>
+
 	<h1>apple projects</h1>
 	<ul>
 		<li><a href="./apple/member/memberList.html">회원관리</a></li>
+	</ul>
+	<hr>
+	
+	<h1>banana projects</h1>
+	<ul>
+		<li><a href="./banana/member/memberList.html">회원관리</a></li>
 	</ul>
 	<hr>
 
