--- a/public/banana/member/memberEdit.html
+++ b/public/banana/member/memberEdit.html
@@ -21,6 +21,7 @@ th, td {
 th {
 	background-color: gray;
 }
+
 </style>
 
 </head>
@@ -69,12 +70,10 @@ th {
 						<option>KT
 						<option>LG
 				</select> <input type="text" id="" name="phone1" size="3" value="010"> - <input type="text" id="" name="phone2"
-					size="4" value="4635"
-				> - <input type="text" id="" name="phone3" size="4" value="6670"></td>
+					size="4" value="4635"> - <input type="text" id="" name="phone3" size="4" value="6670"></td>
 				<th>모바일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="mobile_marketing" value="1" checked>예 <input type="radio" id=""
-					name="mobile_marketing" value="2"
-				>아니오</td>
+					name="mobile_marketing" value="2">아니오</td>
 			</tr>
 			<tr>
 				<th>전화번호</th>
@@ -97,8 +96,7 @@ th {
 						<option>063
 						<option>064
 				</select> - <input type="text" id="" name="homeNumber2" size="3" value="527"> - <input type="text" id=""
-					name="homeNumber3" size="4" value="6685"
-				></td>
+					name="homeNumber3" size="4" value="6685"></td>
 				<th>팩스번호</th>
 				<td><input type="text" id="" name="faxNumber" value="12346576"></td>
 			</tr>
@@ -107,16 +105,14 @@ th {
 				<td><input type="email" id="" name="email" value="yym2044@naver.com"></td>
 				<th>이메일 마케팅 수신 동의</th>
 				<td><input type="radio" id="" name="email_marketing" value="1" checked>예 <input type="radio" id=""
-					name="email_marketing" value="2"
-				>아니오</td>
+					name="email_marketing" value="2">아니오</td>
 
 			</tr>
 
 			<tr>
 				<th>추천인</th>
 				<td colspan="3"><input type="text" id="" name="recommender1" value="김하나"> <input type="text" id=""
-					name="recommender2" value="김둘"
-				> <input type="text" id="" name="recommender3" value="김셋"></td>
+					name="recommender2" value="김둘"> <input type="text" id="" name="recommender3" value="김셋"></td>
 			</tr>
 			<tr>
 				<th>비밀번호 문제</th>
@@ -148,32 +144,26 @@ th {
 			<tr>
 				<th>취미</th>
 				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
-					id="" name="hobby" value="smartphone" checked
-				>스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서 <input type="checkbox" id=""
-					name="hobby" value="shopping"
-				>쇼핑 <input type="checkbox" id="" name="hobby" value="camping">캠핑 <input type="checkbox" id="" name="hobby"
-					value="music" checked
-				>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <br> <input type="checkbox"
-					id="" name="hobby" value="boardgame"
-				>보드게임 <input type="checkbox" id="" name="hobby" value="jog">조깅 <input type="checkbox" id="" name="hobby"
-					value="sow"
-				>바느질 <input type="checkbox" id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id=""
-					name="hobby" value="sports" checked
-				>스포츠 <input type="checkbox" id="" name="hobby" value="else">기타</td>
+					id="" name="hobby" value="smartphone" checked>스마트폰 <input type="checkbox" id="" name="hobby"
+					value="reading">독서 <input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input
+					type="checkbox" id="" name="hobby" value="camping">캠핑 <input type="checkbox" id="" name="hobby"
+					value="music" checked>음악감상 <input type="checkbox" id="" name="hobby" value="instrument">악기연주 <br>
+					<input type="checkbox" id="" name="hobby" value="boardgame">보드게임 <input type="checkbox" id="" name="hobby"
+					value="jog">조깅 <input type="checkbox" id="" name="hobby" value="sow">바느질 <input type="checkbox"
+					id="" name="hobby" value="foodtour">맛집탐방 <input type="checkbox" id="" name="hobby" value="sports" checked>스포츠
+					<input type="checkbox" id="" name="hobby" value="else">기타</td>
 			</tr>
 			<tr>
 				<th>결혼여부</th>
 				<td><input type="radio" id="" name="marriage" value="1">예 <input type="radio" id="" name="marriage"
-					value="2" checked
-				>아니오</td>
+					value="2" checked>아니오</td>
 				<th>결혼기념일</th>
 				<td>-</td>
 			</tr>
 			<tr>
 				<th>자녀유무</th>
 				<td><input type="radio" id="" name="child" value="1">예<input type="radio" id="" name="child" value="2"
-					checked
-				>아니오</td>
+					checked>아니오</td>
 
 
 				<th>좋아하는 색깔</th>
@@ -181,7 +171,7 @@ th {
 			</tr>
 			<tr>
 				<th>본인 소개</th>
-				<td colspan="3"><textarea id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">안녕하세요 반갑습니다 저는 윤영민이라고 합니다 잘 부탁드립니다.</textarea></td>
+				<td colspan="3"><textarea id="" name="introduce" rows="10" cols="110" placeholder="여기에 본인 소개를 작성해주세요.">아버지께서 등산을 좋아하셔서 저는 일곱살 때부터 아버지와 함께 등산을 하게 되었는데 힘들고 가슴이 터질 것 같을 때마다 제 자신을 극복하기 위한 방법을 터득하게 되었습니다. 산에 오르는 걸 좋아하다 보니 높은 산 일수록 더 올라가 보고 싶은 도전정신이 생기고 가슴이 뛰고 힘든 그 상황을 즐기게 되었습니다. 그러한 영향 때문인지 학창시절 친구들과 교통요금만 챙긴 무전여행을 종종 갔는데 처음에는 돈이 없어서 힘들었지만 점차 그 상황에 적응해가며 돈이 있을 때보다 더 재미있고 알차게 여행을 보내곤 했습니다. 어렸을 때부터 매사에 도전하는 자세를 기른 것이 오늘 날 바로 LG 디스플레이에 도전할 수 있는 원동력이 된 것 같습니다.</textarea></td>
 			</tr>
 			<tr>
 				<th>개인정보유효기간</th>
@@ -193,30 +183,30 @@ th {
 				</select></td>
 			</tr>
 		</table>
-<br><hr><br>
+		<br>
+		<hr>
+		<br>
 		<table>
 			<tr>
 				<th>번호</th>
 				<th>프로젝트명</th>
-				<th>기간</th>
+				<th width="220px;">기간</th>
 				<th>프로젝트 내용</th>
 				<th>발주처</th>
 			</tr>
 			<tr>
 				<th>1</th>
 				<td><input type="text" id="" name="projectName1" value="웹"></td>
-				<td>시작일 : <input type="month" id="" name="term1s" value="2020-08"> ~ 종료일 : <input type="month" id=""
-					name="term1e" value="2021-01"
-				></td>
+				<td>시작일 : <input type="month" id="" name="term1s" value="2020-08"> <br><br> 종료일 : <input type="month" id=""
+					name="term1e" value="2021-01"></td>
 				<td><textarea id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
 				<td><input type="text" id="" name="buyer1" value="자체개발"></td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td><input type="text" id="" name="projectName2" value="안드로이드"></td>
-				<td>시작일 : <input type="month" id="" name="term2s" value="2021-02"> ~ 종료일 : <input type="month" id=""
-					name="term2e" value="2022-01"
-				></td>
+				<td>시작일 : <input type="month" id="" name="term2s" value="2021-02"> <br><br> 종료일 : <input type="month" id=""
+					name="term2e" value="2022-01"></td>
 				<td><textarea id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
 				<td><input type="text" id="" name="buyer2" value="자체개발"></td>
 			</tr>
