--- a/public/banana/member/memberView.html
+++ b/public/banana/member/memberView.html
@@ -24,6 +24,10 @@ tr, th, td {
 .oddrow {
 	background-color: azure;
 }
+
+table {
+	margin-left: 30px;
+}
 </style>
 
 </head>
@@ -120,7 +124,10 @@ tr, th, td {
 		</tr>
 		<tr class="oddrow">
 			<th height="200">본인 소개</th>
-			<td colspan="3">안녕하세요 반갑습니다. 저는 윤영민이라고 합니다. 잘 부탁드립니다.</td>
+			<td colspan="3" width="765px"><p>아버지께서 등산을 좋아하셔서 저는 일곱살 때부터 아버지와 함께 등산을 하게 되었는데 힘들고 가슴이 터질 것 같을 때마다 제 자신을 극복하기 위한 방법을 터득하게 되었습니다.
+				산에 오르는 걸 좋아하다 보니 높은 산 일수록 더 올라가 보고 싶은 도전정신이 생기고 가슴이 뛰고 힘든 그 상황을 즐기게 되었습니다. 그러한 영향 때문인지 학창시절 친구들과 교통요금만 챙긴 무전여행을 종종
+				갔는데 처음에는 돈이 없어서 힘들었지만 점차 그 상황에 적응해가며 돈이 있을 때보다 더 재미있고 알차게 여행을 보내곤 했습니다. 어렸을 때부터 매사에 도전하는 자세를 기른 것이 오늘 날 바로 LG 디스플레이에
+				도전할 수 있는 원동력이 된 것 같습니다.</p></td>
 		</tr>
 		<tr>
 			<th>개인정보유효기간</th>
