--- a/public/banana/member/memberEdit.html
+++ b/public/banana/member/memberEdit.html
@@ -22,6 +22,7 @@ th {
 	background-color: gray;
 }
 
+
 </style>
 
 </head>
@@ -43,7 +44,7 @@ th {
 				<th>아이디</th>
 				<td><input type="text" id="" name="id" value="yym2044"></td>
 				<th>비밀번호</th>
-				<td><input type="password" id="" name="password" value="yym2044"></td>
+				<td><input type="password" id="" name="password" value="yym2044" placeholder="영숫자특수문자포함 6자이상" size="25px"></td>
 			</tr>
 			<tr>
 				<th>생년월일</th>
@@ -196,19 +197,19 @@ th {
 			</tr>
 			<tr>
 				<th>1</th>
-				<td><input type="text" id="" name="projectName1" value="웹"></td>
+				<td><textarea id="" name="projectName1" rows="8" cols="22" placeholder="프로젝트명">웹</textarea></td>
 				<td>시작일 : <input type="month" id="" name="term1s" value="2020-08"> <br><br> 종료일 : <input type="month" id=""
 					name="term1e" value="2021-01"></td>
-				<td><textarea id="" name="contents1" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
-				<td><input type="text" id="" name="buyer1" value="자체개발"></td>
+				<td><textarea id="" name="contents1" rows="8" cols="33" placeholder="여기에 내용을 입력하세요.">웹 개발</textarea></td>
+				<td><textarea id="" name="buyer1" rows="8" placeholder="발주처">자체개발</textarea></td>
 			</tr>
 			<tr>
 				<th>2</th>
-				<td><input type="text" id="" name="projectName2" value="안드로이드"></td>
+				<td><textarea id="" name="projectName2" rows="8" cols="22" placeholder="프로젝트명">안드로이드</textarea></td>
 				<td>시작일 : <input type="month" id="" name="term2s" value="2021-02"> <br><br> 종료일 : <input type="month" id=""
 					name="term2e" value="2022-01"></td>
-				<td><textarea id="" name="contents2" rows="6" cols="30" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
-				<td><input type="text" id="" name="buyer2" value="자체개발"></td>
+				<td><textarea id="" name="contents2" rows="8" cols="33" placeholder="여기에 내용을 입력하세요.">안드로이드 개발</textarea></td>
+				<td><textarea id="" name="buyer2" rows="8" placeholder="발주처">자체개발</textarea></td>
 			</tr>
 
 		</table>
