--- a/public/banana/member/memberForm.html
+++ b/public/banana/member/memberForm.html
@@ -26,7 +26,6 @@ table {
 	border-width: 2px;
 	margin-left: 20px;
 }
-
 </style>
 
 </head>
@@ -48,7 +47,7 @@ table {
 				<th>아이디</th>
 				<td><input type="text" id="" name="id"></td>
 				<th>비밀번호</th>
-				<td><input type="password" id="" name="password"></td>
+				<td><input type="password" id="" name="password" placeholder="영숫자특수문자포함 6자이상" size="25px"></td>
 			</tr>
 			<tr>
 				<th>생년월일</th>
@@ -151,11 +150,11 @@ table {
 				<th>취미</th>
 				<td colspan="3"><input type="checkbox" id="" name="hobby" value="movie">영화시청 <input type="checkbox"
 					id="" name="hobby" value="smartphone">스마트폰 <input type="checkbox" id="" name="hobby" value="reading">독서
-					<input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input type="checkbox" id=""
-					name="hobby" value="camping">캠핑 <input type="checkbox" id="" name="hobby" value="music">음악감상
-					<input type="checkbox" id="" name="hobby" value="instrument">악기연주 <br> <input type="checkbox" id=""
-					name="hobby" value="boardgame">보드게임 <input type="checkbox" id="" name="hobby" value="jog">조깅
-					<input type="checkbox" id="" name="hobby" value="sow">바느질 <input type="checkbox" id="" name="hobby"
+					<input type="checkbox" id="" name="hobby" value="shopping">쇼핑 <input type="checkbox" id="" name="hobby"
+					value="camping">캠핑 <input type="checkbox" id="" name="hobby" value="music">음악감상 <input
+					type="checkbox" id="" name="hobby" value="instrument">악기연주 <br> <input type="checkbox" id=""
+					name="hobby" value="boardgame">보드게임 <input type="checkbox" id="" name="hobby" value="jog">조깅 <input
+					type="checkbox" id="" name="hobby" value="sow">바느질 <input type="checkbox" id="" name="hobby"
 					value="foodtour">맛집탐방 <input type="checkbox" id="" name="hobby" value="sports">스포츠 <input
 					type="checkbox" id="" name="hobby" value="else">기타</td>
 
@@ -176,7 +175,7 @@ table {
 			</tr>
 			<tr>
 				<th>본인 소개</th>
-				<td colspan="3"><textarea id="" name="introduce" rows="5" cols="110" placeholder="여기에 본인 소개를 작성해주세요."></textarea></td>
+				<td colspan="3"><textarea id="" name="introduce" rows="10" cols="110" placeholder="여기에 본인 소개를 작성해주세요."></textarea></td>
 			</tr>
 			<tr>
 				<th>개인정보유효기간</th>
@@ -202,16 +201,16 @@ table {
 			<tr>
 				<th>1</th>
 				<td><textarea id="" name="projectName1" rows="8" cols="22" placeholder="프로젝트명"></textarea></td>
-				<td>시작일 : <input type="month" id="" name="term1S" value="2022-01"> <br>
-				<br> 종료일 : <input type="month" id="" name="term1E" value="2022-01"></td>
+				<td>시작일 : <input type="month" id="" name="term1S" value="2022-01"> <br> <br> 종료일 : <input
+					type="month" id="" name="term1E" value="2022-01"></td>
 				<td><textarea id="" name="contents1" rows="8" cols="33" placeholder="여기에 내용을 입력하세요."></textarea></td>
 				<td><textarea id="" name="buyer1" rows="8" placeholder="발주처"></textarea></td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td><textarea id="" name="projectName2" rows="8" cols="22" placeholder="프로젝트명"></textarea></td>
-				<td>시작일 : <input type="month" id="" name="term2S" value="2022-01"> <br>
-				<br> 종료일 : <input type="month" id="" name="term2E" value="2022-01"></td>
+				<td>시작일 : <input type="month" id="" name="term2S" value="2022-01"> <br> <br> 종료일 : <input
+					type="month" id="" name="term2E" value="2022-01"></td>
 				<td><textarea id="" name="contents2" rows="8" cols="33" placeholder="여기에 내용을 입력하세요."></textarea></td>
 				<td><textarea id="" name="buyer2" rows="8" placeholder="발주처"></textarea></td>
 			</tr>
