--- a/public/banana/member/memberForm.html
+++ b/public/banana/member/memberForm.html
@@ -221,6 +221,6 @@ table {
 
 	</form>
 
-	<a href="./memberList.html">목록</a>
+	<a href="./memberList.html" style="font-size: 20px">목록</a>
 </body>
 </html>
