--- a/public/banana/member/memberEdit.html
+++ b/public/banana/member/memberEdit.html
@@ -214,6 +214,6 @@ th {
 
 		</table>
 	</form>
-	<a href="./memberList.html">목록</a>
+	<a href="./memberList.html" style="font-size: 20px">목록</a>
 </body>
 </html>
