--- a/public/banana/member/memberList.html
+++ b/public/banana/member/memberList.html
@@ -2,7 +2,10 @@
 <html lang="ko">
 <head>
 <meta charset="uTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta
+	name="viewport"
+	content="width=device-width, initial-scale=1.0">
+
 
 <title>Yun html projects memberList</title>
 
@@ -33,7 +36,7 @@ th, td {
 	memberList.html
 
 	<table>
-
+<caption>회원 리스트</caption>
 		<tr class="oddrow">
 			<th>번호</th>
 			<th>이름</th>
@@ -126,6 +129,7 @@ th, td {
 			<td>01088888888</td>
 		</tr>
 	</table>
+
 	<a href="./memberForm.html">등록</a>
 </body>
 </html>
