--- a/public/banana/member/memberView.html
+++ b/public/banana/member/memberView.html
@@ -3,7 +3,10 @@
 
 <head>
 <meta charset="uTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta
+	name="viewport"
+	content="width=device-width, initial-scale=1.0">
+
 
 <title>Yun html projects memberView</title>
 
@@ -97,7 +100,9 @@ table {
 			<th>sns</th>
 			<td>facebook</td>
 			<th>사진</th>
-			<td><img src="./winter.jpeg" width="200"></td>
+			<td><img
+				src="./winter.jpeg"
+				width="200"></td>
 		</tr>
 		<tr class="oddrow">
 			<th>홈페이지</th>
@@ -124,10 +129,12 @@ table {
 		</tr>
 		<tr class="oddrow">
 			<th height="200">본인 소개</th>
-			<td colspan="3" width="600px"><p>아버지께서 등산을 좋아하셔서 저는 일곱살 때부터 아버지와 함께 등산을 하게 되었는데 힘들고 가슴이 터질 것 같을 때마다 제 자신을 극복하기 위한 방법을 터득하게 되었습니다.
-				산에 오르는 걸 좋아하다 보니 높은 산 일수록 더 올라가 보고 싶은 도전정신이 생기고 가슴이 뛰고 힘든 그 상황을 즐기게 되었습니다. 그러한 영향 때문인지 학창시절 친구들과 교통요금만 챙긴 무전여행을 종종
-				갔는데 처음에는 돈이 없어서 힘들었지만 점차 그 상황에 적응해가며 돈이 있을 때보다 더 재미있고 알차게 여행을 보내곤 했습니다. 어렸을 때부터 매사에 도전하는 자세를 기른 것이 오늘 날 바로 LG 디스플레이에
-				도전할 수 있는 원동력이 된 것 같습니다.</p></td>
+			<td
+				colspan="3"
+				width="600px"><p>아버지께서 등산을 좋아하셔서 저는 일곱살 때부터 아버지와 함께 등산을 하게 되었는데 힘들고 가슴이 터질 것 같을 때마다 제 자신을 극복하기 위한 방법을 터득하게
+					되었습니다. 산에 오르는 걸 좋아하다 보니 높은 산 일수록 더 올라가 보고 싶은 도전정신이 생기고 가슴이 뛰고 힘든 그 상황을 즐기게 되었습니다. 그러한 영향 때문인지 학창시절 친구들과 교통요금만 챙긴
+					무전여행을 종종 갔는데 처음에는 돈이 없어서 힘들었지만 점차 그 상황에 적응해가며 돈이 있을 때보다 더 재미있고 알차게 여행을 보내곤 했습니다. 어렸을 때부터 매사에 도전하는 자세를 기른 것이 오늘 날 바로
+					LG 디스플레이에 도전할 수 있는 원동력이 된 것 같습니다.</p></td>
 		</tr>
 		<tr>
 			<th>개인정보유효기간</th>
@@ -162,8 +169,11 @@ table {
 
 	</table>
 	<br>
+	
 	<a href="./memberList.html" style="font-size: 20px; padding-left: 30px;">목록</a>
 	<a href="./memberEdit.html" style="font-size: 20px">수정</a>
 	<a href="./memberList.html" style="font-size: 20px">삭제</a>
+	
+
 </body>
 </html>
