--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
 		<li><a href="./banana/member/memberList.html">회원관리</a></li>
 	</ul>
 	<hr>
+	
+	<h1>cherry projects</h1>
+	<ul>
+		<li><a href="./cherry/member/memberList.html">회원관리</a></li>
+	</ul>
+	<hr>
 
 </body>
 </html>
